# GradientDeskFrontend

./: .firebaserc  README.md  code_counter  firebase.json  package-lock.json  package.json  vue.config.js
.firebase/: hosting.ZGlzdA.cache
public/: index.html
src/: App.vue  main.js  router.js  store.js
src/components/: Account.vue  Datasets.vue  EditDataset.vue  EditProject.vue  Header.vue  Home.vue  Login.vue  NewDataset.vue  NewProject.vue  PrepareDataset.vue  Projects.vue  SelectDataset.vue  ViewDataset.vue  ViewProject.vue
src/components/ui/: Button.vue  CheckBox.vue  Slider.vue  TextInput.vue
src/router/: index.js
wasm/: Cargo.toml  README.md
wasm/src/: activation.rs  layer.rs  lib.rs  matrix.rs  neural.rs  playing_around.rs
wasm/src/loss/: crossentropy.rs  mae.rs  mod.rs  mse.rs  rmse.rs
wasm/src/optimiser/: adam.rs  mod.rs  momentum.rs  nesterov.rs  rmsprop.rs  sgd.rs
